--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 </head>
 <body>
     <h1>Welcome to my very own Etch-A-Sketch (don't sue me)</h1>
-
-    create a 16x16 grid of square divs using JS
-    put them inside a main container
-    ask user for number to generate new grid (limit 100)
+    <button id="reset-btn">Reset Grid</button>
+    <div id="grid-ctn"></div>
 
 </body>
 </html>
